; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/base/extr_bus.c_device_remove_attrs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/base/extr_bus.c_device_remove_attrs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bus_type = type { i32* }
%struct.device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bus_type*, %struct.device*)* @device_remove_attrs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @device_remove_attrs(%struct.bus_type* %0, %struct.device* %1) #0 {
  %3 = alloca %struct.bus_type*, align 8
  %4 = alloca %struct.device*, align 8
  %5 = alloca i32, align 4
  store %struct.bus_type* %0, %struct.bus_type** %3, align 8
  store %struct.device* %1, %struct.device** %4, align 8
  %6 = load %struct.bus_type*, %struct.bus_type** %3, align 8
  %7 = getelementptr inbounds %struct.bus_type, %struct.bus_type* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %34

10:                                               ; preds = %2
  store i32 0, i32* %5, align 4
  br label %11

11:                                               ; preds = %30, %10
  %12 = load %struct.bus_type*, %struct.bus_type** %3, align 8
  %13 = getelementptr inbounds %struct.bus_type, %struct.bus_type* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = load i32, i32* %5, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = call i64 @attr_name(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %33

21:                                               ; preds = %11
  %22 = load %struct.device*, %struct.device** %4, align 8
  %23 = load %struct.bus_type*, %struct.bus_type** %3, align 8
  %24 = getelementptr inbounds %struct.bus_type, %struct.bus_type* %23, i32 0, i32 0
  %25 = load i32*, i32** %24, align 8
  %26 = load i32, i32* %5, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i32, i32* %25, i64 %27
  %29 = call i32 @device_remove_file(%struct.device* %22, i32* %28)
  br label %30

30:                                               ; preds = %21
  %31 = load i32, i32* %5, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %5, align 4
  br label %11

33:                                               ; preds = %11
  br label %34

34:                                               ; preds = %33, %2
  ret void
}

declare dso_local i64 @attr_name(i32) #1

declare dso_local i32 @device_remove_file(%struct.device*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
